@@ -1,3 +1,9 @@
+2000-06-22  Alan Modra  <alan@linuxcare.com.au>
+
+	* Makefile.am (DEP): grep for leading `/' in DEP1, and fail if we
+	find one.
+	* Makefile.in: Regenerate.
+
 2000-06-20  Alexander Aganichev <AAganichev@hypercom.com>
 
 	* ar.c (normalize): Correct pointer comparison when checking for
